--- a/WebAppStore/Properties/launchSettings.json
+++ b/WebAppStore/Properties/launchSettings.json
@@ -10,6 +10,7 @@
   "profiles": {
     "WebAppStore": {
       "commandName": "Project",
+      "hotReloadProfile": "aspnetcore",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7273;http://localhost:5079",
